# django-api-template

./: .pre-commit-config.yaml  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt
src/core/: urls.py
src/core/settings/: __init__.py
src/core/settings/components/: base.py  baton.py  dev.py  rest_framework.py
