[tool.poetry]
name = "django api template"
version = "0.1"
description = "Django API Template - project for fast start django projects."
authors = ["BRANYA <tbd2504@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.11"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
django-baton = "^3.1.0"
django-split-settings = "^1.3.0"
django-admin-thumbnails = "^0.2.8"
django-filter = "^24.1"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.1"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.2"
django-debug-toolbar = "^4.3.0"
faker = "^24.1.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
extend-exclude = ["**/migrations/**"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false